@@ -1,3 +1,6 @@
+2013-10-21 John Wu <John dot Wu at ACM dot org>
+	* src/bitvector.h:833 neglected to flip the bits
+
 2013-10-15 John Wu <John dot Wu at ACM dot org>
 	* src/array_t.cpp: array_t<T>::deepCopy has an incorrect test for
 	the validity of the incoming array (which causes the error
